--- a/src/html/admin-add.html
+++ b/src/html/admin-add.html
@@ -7,7 +7,7 @@
 		<meta name="renderer" content="webkit">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 		<meta name="viewport" content="width=device-width,user-scalable=yes, minimum-scale=0.4, initial-scale=0.8,target-densitydpi=low-dpi" />
-		<link rel="shortcut icon" href="/favicon.ico" type="image/x-icon" />
+		<link rel="shortcut icon" href="../images/favicon.ico" type="image/x-icon" />
 		<link rel="stylesheet" href="../css/font.css">
 		<link rel="stylesheet" href="../css/xadmin.css">
 		<link rel="stylesheet" href="../css/admin.css">
@@ -88,13 +88,11 @@
 				<div class="layui-form-item">
 					<label for="L_repass" class="layui-form-label">
              </label>
-					<input type="button" class="layui-btn" id="addBtn" lay-filter="add" lay-submit="" value="增加">
+					<input type="button" class="layui-btn" id="addBtn" lay-filter="add" lay-submit="" value="添加">
 				</div>
 			</form>
 		</div>
-
-		<script type="text/javascript" src="https://cdn.bootcss.com/jquery/3.2.1/jquery.min.js"></script>
-		<script src="../lib/jquery-1.10.1.min.js" type="text/javascript" charset="utf-8"></script>
+		<script type="text/javascript" src="../lib/jquery-v3.2.1.js"></script>
 		<script type="text/javascript" src="../lib/layui/layui.js" charset="utf-8"></script>
 		<script type="text/javascript" src="../js/xadmin.js"></script>
 		<script type="text/javascript" src="../lib/common.js"></script>
