--- a/src/html/admin-edit.html
+++ b/src/html/admin-edit.html
@@ -7,7 +7,7 @@
 		<meta name="renderer" content="webkit">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 		<meta name="viewport" content="width=device-width,user-scalable=yes, minimum-scale=0.4, initial-scale=0.8,target-densitydpi=low-dpi" />
-		<link rel="shortcut icon" href="/favicon.ico" type="image/x-icon" />
+		<link rel="shortcut icon" href="../images/favicon.ico" type="image/x-icon" />
 		<link rel="stylesheet" href="../css/font.css">
 		<link rel="stylesheet" href="../css/xadmin.css">
 		<link rel="stylesheet" href="../css/admin.css">
@@ -61,25 +61,14 @@
 				</div>
 				<div class="layui-form-item">
 					<label for="L_pass" class="layui-form-label">
-                   	 密码
+                   	 请输入密码
                 </label>
 					<div class="layui-input-inline">
-						<input type="password" id="L_pass2" name="pass" lay-verify="pass" autocomplete="off" class="layui-input">
+						<input type="password" id="L_pass2" name="pass"  lay-verify="pass" autocomplete="off" class="layui-input">
 					</div>
 					<div class="layui-form-mid layui-word-aux">
-						<span class="x-red">*</span>
-						<sapn id="pswInfor">6-18位字母、数字或下划线组成</sapn>
-					</div>
-				</div>
-				<div class="layui-form-item">
-					<label for="L_repass" class="layui-form-label">
-                    	确认密码
-                </label>
-					<div class="layui-input-inline">
-						<input type="password" id="L_repass2" name="repass" lay-verify="repass" autocomplete="off" class="layui-input">
-					</div>
-					<div class="layui-form-mid layui-word-aux">
-						<sapn id="conInfor2"></sapn>
+						<!-- <span class="x-red">*</span> -->
+						<sapn id="pswInfor"></sapn>
 					</div>
 				</div>
 				<div class="layui-form-item">
@@ -89,144 +78,11 @@
 				</div>
 			</form>
 		</div>
-		<script type="text/javascript" src="https://cdn.bootcss.com/jquery/3.2.1/jquery.min.js"></script>
-		<script src="../lib/jquery-1.10.1.min.js" type="text/javascript" charset="utf-8"></script>
+		<script type="text/javascript" src="../lib/jquery-v3.2.1.js"></script>
 		<script type="text/javascript" src="../lib/layui/layui.js" charset="utf-8"></script>
 		<script type="text/javascript" src="../js/xadmin.js"></script>
 		<script type="text/javascript" src="../lib/common.js"></script>
-		<script>
-			var _id = '';
-			if(Cookie.get('_id')) {
-
-				_id = Cookie.get('_id');
-
-				$.ajax({
-					type: 'get',
-					url: 'http://localhost:3008/addAdmin/checkid',
-					// url: '/addAdmin/checkid',
-					async: true,
-					data: {
-						'_id': _id
-					},
-					success: function(str) {
-						// console.log(str);
-						var renderdata = str.data;
-						console.log(renderdata);
-						// x_admin_show('','./admin-list.html');
-
-						$('#username2').val(renderdata.username);
-						$('#phone2').val(renderdata.tel);
-						$('#L_email2').val(renderdata.email);
-						$('#L_pass2').val(renderdata.password);
-						$('#L_repass2').val(renderdata.password);
-
-						var isok1 = true;
-						$('#username2').blur(() => {
-							var val = $('#username2').val();
-							var strs = checkReg.trim(val);
-							console.log(strs);
-
-							if(strs) {
-								$.ajax({
-									type: 'get',
-									url: 'http://localhost:3008/addAdmin/checkname',
-									// url: '/addAdmin/checkname',
-									async: true,
-									data: {
-										'username': strs
-									},
-									success: (str) => {
-										if(str.code == '1') {
-											if(renderdata.username == str.data.username) {
-												console.log(1);
-												isok1 = true;
-											} else {
-												console.log('same');
-												$('#userInfor').html('该登录名已存在');
-												$('#userInfor').css('color', 'red');
-												isok1 = false;
-											}
-
-										} else {
-											isok1 = true;
-										}
-									}
-								});
-							} else {
-								$('#userInfor').html('登录名不符合规则');
-								$('#userInfor').css('color', 'red');
-								isok1 = false;
-							}
-						});
-
-						var role = renderdata.role;
-						$('#role input').eq(0).prop('checked', 'checked');
-						for(var i = 0; i < $('#role input').size(); i++) {
-							if($('#role input').eq(i).data('names') == renderdata.role) {
-								$('#role input').eq(i).prop('checked', 'checked');
-							}
-						}
-
-						$('#role input').click(function() {
-							console.log($(this));
-							$(this).prop('checked', 'checked');
-							role = $(this).data('names');
-						});
-
-						layui.use(['form', 'layer'], function() {
-							$ = layui.jquery;
-							var form = layui.form,
-								layer = layui.layer;
-
-							form.verify({
-								username: [/^[a-zA-Z][\w\-]{2,19}$/, '登录名以字母开头，3-20位'],
-								pass: [/(.+){6,12}$/, '密码必须6到12位'],
-								repass: function(value) {
-									if($('#L_pass').val() != $('#L_repass').val()) {
-										return '两次密码不一致';
-									}
-								}
-							});
-
-							// 监听提交
-							form.on('submit(add)', function() {
-								if(isok1) {
-									$.ajax({
-										type: 'post',
-										url: 'http://localhost:3008/addAdmin/update',
-										// url: '/addAdmin/update',
-										async: true,
-										data: {
-											'username': $('#username2').val(),
-											'password': $('#L_pass2').val(),
-											'role': role,
-											'tel': $('#phone2').val(),
-											'email': $('#L_email2').val(),
-											'_id': renderdata._id
-										},
-										success: function(str) {
-											console.log(str);
-											// x_admin_show('','./admin-list.html');
-											layer.alert("更新成功", {
-												icon: 6
-											}, function() {
-												var index = parent.layer.getFrameIndex(window.name);
-												window.parent.location.reload();
-												parent.layer.close(index);
-											});
-										}
-									});
-								} else {
-									console.log('请输入完整信息');
-									return false;
-								}
-							});
-						});
-
-					}
-				});
-			};
-		</script>
+		<script type="text/javascript" src="../js/admin-edit.js"></script>
 	</body>
 
 </html>
