--- a/src/html/good-add.html
+++ b/src/html/good-add.html
@@ -7,11 +7,10 @@
 		<meta name="renderer" content="webkit">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 		<meta name="viewport" content="width=device-width,user-scalable=yes, minimum-scale=0.4, initial-scale=0.8,target-densitydpi=low-dpi" />
-		<link rel="shortcut icon" href="/favicon.ico" type="image/x-icon" />
+		<link rel="shortcut icon" href="../images/favicon.ico" type="image/x-icon" />
 		<link rel="stylesheet" href="../css/font.css">
 		<link rel="stylesheet" href="../css/xadmin.css">
 		<link rel="stylesheet" href="../css/good.css">
-
 	</head>
 
 	<body>
@@ -28,14 +27,14 @@
                  	现价
               </label>
 					<div class="layui-input-inline">
-						<input type="text" id="price" name="price" required="" lay-verify="required" autocomplete="off" class="layui-input">
+						<input type="number" min="0" id="price" name="price" required="" lay-verify="required" autocomplete="off" class="layui-input">
 					</div>
 
 					<label for="original" class="layui-form-label original">
                  	原价
               </label>
 					<div class="layui-input-inline">
-						<input type="text" id="original" name="original" required="" lay-verify="required" autocomplete="off" class="layui-input">
+						<input type="number" min="0" id="original" name="original" required="" lay-verify="required" autocomplete="off" class="layui-input">
 					</div>
 				</div>
 				<div class="layui-form-item">
@@ -44,7 +43,6 @@
               </label>
 					<div class="layui-input-inline">
 						<select id="category" name="contrller">
-							<!-- <option>请选择分类</option> -->
 							<option value="包袋">包袋</option>
 							<option value="服饰">服饰</option>
 							<option value="鞋靴">鞋靴</option>
@@ -61,7 +59,7 @@
                   	库存
               </label>
 					<div class="layui-input-inline">
-						<input type="text" id="goodNum" name="goodNum" required="" lay-verify="required" autocomplete="off" class="layui-input">
+						<input type="number" min="0" id="goodNum" name="goodNum" required="" lay-verify="required" autocomplete="off" class="layui-input">
 					</div>
 				</div>
 
@@ -77,20 +75,6 @@
 							<div class="layui-upload-list" id="demo2"></div>
 						</blockquote>
 					</div>
-
-					<!-- <button type="button" name="goodspic" class="layui-btn" id="test1">
-                <i class="layui-icon">&#xe67c;</i>上传图片
-              </button> -->
-					<!-- <div id="u912" class="ax_default image">
-                <img id="u912_img" class="img " src="../images/b1%20%281%29.jpg">
-                
-                <label><input type="radio" name="choose" data-mark="1">设为封面</label>
-            </div>
-            <div id="u912" class="ax_default image">
-                <img id="u912_img" class="img " src="../images/b1%20%281%29.jpg">
-                
-                <label><input type="radio" name="choose" data-mark="1">设为封面</label>
-            </div> -->
 				</div>
 				<div class="layui-form-item" id="activity">
 					<label class="layui-form-label">促销活动</label>
@@ -123,122 +107,10 @@
 				</div>
 			</form>
 		</div>
-		<script type="text/javascript" src="https://cdn.bootcss.com/jquery/3.2.1/jquery.min.js"></script>
+		<script type="text/javascript" src="../lib/jquery-v3.2.1.js"></script>
 		<script type="text/javascript" src="../lib/layui/layui.js" charset="utf-8"></script>
 		<script type="text/javascript" src="../js/xadmin.js"></script>
-		<script>
-			let upImgUrl = '';
-			layui.use('upload', function() {
-				var $ = layui.jquery,
-					upload = layui.upload;
-
-				//多图片上传
-				upload.render({
-					elem: '#test2',
-					url: '/upload',
-					multiple: true,
-					before: function(obj) {
-						//预读本地文件示例，不支持ie8
-						obj.preview(function(index, file, result) {
-							$('#demo2').append('<img src="' + result + '" alt="' + file.name + '" class="layui-upload-img">')
-						});
-					},
-					done: function(res) {
-						//上传完毕
-						console.log(res);
-						// var obj=JSON.parse(res);
-						// console.log(obj);
-						imgData = res.data;
-						upImgUrl = imgData[0].path + '&' + upImgUrl;
-						console.log(upImgUrl);
-					}
-				});
-
-			});
-
-			var activity = '';
-			var status = '';
-			var url = '';
-			var category = '';
-
-			// 判断商品活动
-			$('#activity input').eq(0).prop('checked', 'checked');
-			// console.log($('#activity input').eq(0).prop('checked'));
-			activity = $('#activity input').eq(0).data('names');
-			// console.log(activity);
-			$('#activity input').click(function() {
-				console.log($(this));
-				$(this).prop('checked', 'checked');
-				activity = $(this).data('names');
-				// console.log(activity);
-			});
-
-			// 判断商品状态
-			$('#status input').prop('checked', 'checked');
-			// $('#status .layui-form-switch').addClass('layui-form-onswitch');
-			status = '上架';
-
-			var ischeck = false;
-
-			$('#status').on('click', '.layui-form-switch', function() {
-				if(ischeck) {
-					$('#status input').prop('checked', 'checked');
-					status = '上架';
-				} else {
-					$('#status input').removeAttr('checked');
-					status = '下架';
-				}
-				ischeck = !ischeck;
-			})
-
-			// layui-unselect layui-form-switch layui-form-onswitch
-			// 点击添加商品
-			layui.use(['form', 'layer'], function() {
-				$ = layui.jquery;
-				var form = layui.form,
-					layer = layui.layer;
-				var isok1 = true;
-
-				// 监听提交
-				form.on('submit(add)', function() {
-					// console.log(123456);
-					if(isok1) {
-						$.ajax({
-							type: 'post',
-							url: 'http://localhost:3008/good/addgood',
-							// url: '/addAdmin/addname',
-							async: true,
-							data: {
-								'name': $('#title').val(),
-								'price': $('#price').val(),
-								'original': $('#original').val(),
-								'category': $('#category').val(),
-								'total': $('#goodNum').val(),
-								'activity': activity,
-								'desc': $('#desc').val(),
-								'status': status,
-								'upImgUrl': upImgUrl
-							},
-							success: function(str) {
-								console.log(str);
-								layer.alert("添加成功", {
-									icon: 6
-								}, function() {
-									// 获得frame索引
-									var index = parent.layer.getFrameIndex(window.name);
-									window.parent.location.reload(); //刷新父页面
-									//关闭当前frame
-									parent.layer.close(index);
-								});
-							}
-						});
-					} else {
-						return false
-					}
-				});
-
-			});
-		</script>
+		<script type="text/javascript" src="../js/good-add.js"></script>
 
 	</body>
 
