--- a/src/html/good-edit.html
+++ b/src/html/good-edit.html
@@ -7,7 +7,7 @@
 		<meta name="renderer" content="webkit">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 		<meta name="viewport" content="width=device-width,user-scalable=yes, minimum-scale=0.4, initial-scale=0.8,target-densitydpi=low-dpi" />
-		<link rel="shortcut icon" href="/favicon.ico" type="image/x-icon" />
+		<link rel="shortcut icon" href="../images/favicon.ico" type="image/x-icon" />
 		<link rel="stylesheet" href="../css/font.css">
 		<link rel="stylesheet" href="../css/xadmin.css">
 		<link rel="stylesheet" href="../css/good.css">
@@ -24,26 +24,25 @@
 				</div>
 				<div class="layui-form-item">
 					<label for="price" class="layui-form-label">
-                  <!-- <span class="x-red">*</span> -->现价
+                 	现价
               </label>
 					<div class="layui-input-inline">
-						<input type="text" id="price" name="price" required="" lay-verify="required" autocomplete="off" class="layui-input">
+						<input type="number" min="0" id="price" name="price" required="" lay-verify="required" autocomplete="off" class="layui-input">
 					</div>
 
 					<label for="original" class="layui-form-label original">
-                  <!-- <span class="x-red">*</span> -->原价
+                  	原价
               </label>
 					<div class="layui-input-inline">
-						<input type="text" id="original" name="original" required="" lay-verify="required" autocomplete="off" class="layui-input">
+						<input type="number" min="0" id="original" name="original" required="" lay-verify="required" autocomplete="off" class="layui-input">
 					</div>
 				</div>
 				<div class="layui-form-item">
 					<label for="category" class="layui-form-label">
-                  <!-- <span class="x-red">*</span> -->商品类别
+                  	商品类别
               </label>
 					<div class="layui-input-inline">
 						<select id="category" name="contrller">
-							<!-- <option>请选择分类</option> -->
 							<option value="包袋">包袋</option>
 							<option value="服饰">服饰</option>
 							<option value="鞋靴">鞋靴</option>
@@ -57,10 +56,10 @@
 				</div>
 				<div class="layui-form-item">
 					<label for="goodNum" class="layui-form-label">
-                  <!-- <span class="x-red">*</span> -->库存
+                 	库存
               </label>
 					<div class="layui-input-inline">
-						<input type="text" id="goodNum" name="goodNum" required="" lay-verify="required" autocomplete="off" class="layui-input">
+						<input type="number" min="0" id="goodNum" name="goodNum" required="" lay-verify="required" autocomplete="off" class="layui-input">
 					</div>
 				</div>
 
@@ -76,20 +75,6 @@
 							<div class="layui-upload-list" id="demo2"></div>
 						</blockquote>
 					</div>
-
-					<!-- <button type="button" name="goodspic" class="layui-btn" id="test1">
-                <i class="layui-icon">&#xe67c;</i>上传图片
-              </button> -->
-					<!-- <div id="u912" class="ax_default image">
-                <img id="u912_img" class="img " src="../images/b1%20%281%29.jpg">
-                
-                <label><input type="radio" name="choose" data-mark="1">设为封面</label>
-            </div>
-            <div id="u912" class="ax_default image">
-                <img id="u912_img" class="img " src="../images/b1%20%281%29.jpg">
-                
-                <label><input type="radio" name="choose" data-mark="1">设为封面</label>
-            </div> -->
 				</div>
 				<div class="layui-form-item" id="activity">
 					<label class="layui-form-label">促销活动</label>
@@ -122,162 +107,11 @@
 				</div>
 			</form>
 		</div>
-
-		<script type="text/javascript" src="https://cdn.bootcss.com/jquery/3.2.1/jquery.min.js"></script>
+		<script type="text/javascript" src="../lib/jquery-v3.2.1.js"></script>
 		<script type="text/javascript" src="../lib/layui/layui.js" charset="utf-8"></script>
 		<script type="text/javascript" src="../lib/common.js"></script>
 		<script type="text/javascript" src="../js/xadmin.js"></script>
-		<script>
-			var _id = '';
-			if(Cookie.get('_id')) {
-				_id = Cookie.get('_id');
-
-				$.ajax({
-					type: 'get',
-					url: 'http://localhost:3008/good/checkid',
-					// url: '/addAdmin/checkid',
-					async: true,
-					data: {
-						'_id': _id
-					},
-					success: function(str) {
-						// console.log(str);
-						var renderdata = str.data;
-						console.log(renderdata);
-						// x_admin_show('','./admin-list.html');
-
-						$('#title').val(renderdata.name);
-						$('#price').val(renderdata.price);
-						$('#original').val(renderdata.original);
-						$('#category').val(renderdata.category);
-						$('#goodNum').val(renderdata.total);
-						$('#desc').val(renderdata.desc);
-
-						let activity = renderdata.activity;
-						let status = renderdata.status;
-						let upImgUrl = renderdata.upImgUrl;
-
-						for(var i = 0; i < $('#activity input').length; i++) {
-							if($('#activity input').eq(i).data('names') == renderdata.activity) {
-								$('#activity input').eq(i).prop('checked', 'checked');
-							}
-						}
-
-						$('#activity input').click(function() {
-							console.log($(this));
-							$(this).prop('checked', 'checked');
-							activity = $(this).data('names');
-						});
-
-						let imgArr = (renderdata.upImgUrl).split('&').slice(0, -1);
-						console.log(imgArr);
-
-						for(var i = 0; i < imgArr.length; i++) {
-							var html = '<img src="../' + imgArr[i] + '" alt="" class="layui-upload-img">';
-							$('#demo2').html(html + $('#demo2').html());
-						}
-
-						var ischeck = true;
-						if(renderdata.status == '上架') {
-							$('#status input').prop('checked', 'checked');
-							status = '上架';
-							ischeck = false;
-						} else {
-							$('#status input').removeAttr('checked');
-							status = '下架';
-							ischeck = true;
-						}
-
-						$('#status').on('click', '.layui-form-switch', function() {
-							if(ischeck) {
-								$('#status input').prop('checked', 'checked');
-								status = '上架';
-							} else {
-								$('#status input').removeAttr('checked');
-								status = '下架';
-							}
-							ischeck = !ischeck;
-						})
-
-						layui.use('upload', function() {
-							var $ = layui.jquery,
-								upload = layui.upload;
-
-							//多图片上传
-							upload.render({
-								elem: '#test2',
-								url: '/upload',
-								multiple: true,
-								before: function(obj) {
-									//预读本地文件示例，不支持ie8
-									obj.preview(function(index, file, result) {
-										$('#demo2').append('<img src="' + result + '" alt="' + file.name + '" class="layui-upload-img">')
-									});
-								},
-								done: function(res) {
-									//上传完毕
-									console.log(res);
-									// var obj=JSON.parse(res);
-									// console.log(obj);
-									imgData = res.data;
-									imgUrl = imgData[0].path;
-									console.log(upImgUrl);
-									upImgUrl = upImgUrl + imgUrl + '&';
-									console.log(upImgUrl);
-								}
-							});
-
-						});
-
-						layui.use(['form', 'layer'], function() {
-							$ = layui.jquery;
-							var form = layui.form,
-								layer = layui.layer;
-							// 监听提交
-							form.on('submit(add)', function() {
-								// if (isok1) {
-								$.ajax({
-									type: 'post',
-									url: 'http://localhost:3008/good/updategood',
-									// url: '/addAdmin/update',
-									async: true,
-									data: {
-										'name': $('#title').val(),
-										'price': $('#price').val(),
-										'original': $('#original').val(),
-										'category': $('#category').val(),
-										'total': $('#goodNum').val(),
-										'desc': $('#desc').val(),
-										'activity': activity,
-										'status': status,
-										'upImgUrl': upImgUrl,
-										'_id': renderdata._id
-									},
-									success: function(str) {
-										console.log(str);
-										// x_admin_show('','./admin-list.html');
-										layer.alert("更新成功", {
-											icon: 6
-										}, function() {
-											// 获得frame索引
-											var index = parent.layer.getFrameIndex(window.name);
-
-											window.parent.location.reload(); //刷新父页面
-											//关闭当前frame
-											parent.layer.close(index);
-										});
-									}
-								});
-								return false;
-							});
-
-						});
-
-					}
-				});
-			};
-			// };
-		</script>
+		<script type="text/javascript" src="../js/good-edit.js"></script>
 
 	</body>
 
