--- a/src/html/good-list.html
+++ b/src/html/good-list.html
@@ -7,7 +7,7 @@
 		<meta name="renderer" content="webkit">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 		<meta name="viewport" content="width=device-width,user-scalable=yes, minimum-scale=0.4, initial-scale=0.8,target-densitydpi=low-dpi" />
-		<link rel="shortcut icon" href="/favicon.ico" type="image/x-icon" />
+		<link rel="shortcut icon" href="../images/favicon.ico" type="image/x-icon" />
 		<link rel="stylesheet" href="../css/font.css">
 		<link rel="stylesheet" href="../css/xadmin.css">
 		<link rel="stylesheet" href="../css/good.css">
@@ -27,22 +27,6 @@
 		<div class="x-body">
 			<div class="layui-row">
 				<form class="layui-form layui-col-md12 x-so">
-					<!--    <input class="layui-input" placeholder="开始日" name="start" id="start">
-          <input class="layui-input" placeholder="截止日" name="end" id="end"> -->
-					<!-- <div class="layui-input-inline">
-                        <select name="contrller">
-                            <option>请选择分类</option>
-                            <option>包袋</option>
-                            <option>服饰</option>
-                            <option>鞋靴</option>
-                            <option>腕表</option>
-                            <option>配饰</option>
-                            <option>妆品</option>
-                            <option>生活</option>
-                            <option>婴童</option>
-
-                        </select>
-                    </div> -->
 					<input type="text" name="username" placeholder="请输入商品编号" autocomplete="off" class="layui-input" id="goodid">
 					<button id="search" class="layui-btn" lay-submit="" lay-filter="sreach"><i class="layui-icon">&#xe615;</i></button>
 				</form>
@@ -62,204 +46,39 @@
 						<th style="width:100px;">ID</th>
 						<th>商品名称</th>
 						<th data-field="category" data-key="4-0-2" class=" layui-unselect">
-							<div class="layui-table-cell laytable-cell-4-0-2"><span>分类</span><span class="layui-table-sort layui-inline" data-name="category"><i class="layui-edge layui-table-sort-asc rule_category1"></i><i class="layui-edge layui-table-sort-desc rule_category2"></i></span></div>
+							<div class="layui-table-cell laytable-cell-4-0-2"><span>分类</span></div>
 						</th>
-						<!-- <th data-field="price" data-key="4-0-2" class=" layui-unselect"><div class="layui-table-cell laytable-cell-4-0-2"><span>原价</span><span class="layui-table-sort layui-inline" lay-sort="asc"><i class="layui-edge layui-table-sort-asc" title="升序"></i><i class="layui-edge layui-table-sort-desc" title="降序"></i></span></div></th> -->
-						<!-- <th>分类</th> -->
 						<th>原价</th>
 						<th data-field="price" data-key="4-0-2" class=" layui-unselect">
-							<div class="layui-table-cell laytable-cell-4-0-2"><span>现价</span><span class="layui-table-sort layui-inline" data-name="price"><i class="layui-edge layui-table-sort-asc" title="升序"></i><i class="layui-edge layui-table-sort-desc" title="降序"></i></span></div>
+							<div class="layui-table-cell laytable-cell-4-0-2"><span>现价</span><span class="layui-table-sort layui-inline" data-name="original"><i class="layui-edge layui-table-sort-asc" title="升序"></i><i class="layui-edge layui-table-sort-desc" title="降序"></i></span></div>
 						</th>
-						<!-- <th>现价</th> -->
 						<th>库存</th>
 						<th data-field="time" data-key="4-0-2" class=" layui-unselect">
-							<div class="layui-table-cell laytable-cell-4-0-2"><span>添加时间</span><span class="layui-table-sort layui-inline" data-name="time"><i class="layui-edge layui-table-sort-asc activeup" title="升序"></i><i class="layui-edge layui-table-sort-desc" title="降序"></i></span></div>
+							<div class="layui-table-cell laytable-cell-4-0-2"><span>添加时间</span><span class="layui-table-sort layui-inline" data-name="time"><i class="layui-edge layui-table-sort-asc"></i><i class="layui-edge layui-table-sort-desc activedown"></i></span></div>
 						</th>
-						<!-- <th>添加时间</th> -->
 						<th>状态</th>
-						<!-- <th>配送方式</th>
-            <th>下单时间</th> -->
 						<th>操作</th>
 					</tr>
 				</thead>
 				<tbody id="goodList">
-					<!-- <tr>
-            <td>
-              <div class="layui-unselect layui-form-checkbox" lay-skin="primary" data-id='2'><i class="layui-icon">&#xe605;</i></div>
-            </td>
-            <td>2017009171822298053</td>
-            <td>老王:18925139194</td>
-            <td>7829.10</td>
-            <td>7854.10</td>
-            <td>待确认</td>
-            <td>未支付</td>
-            <td>未发货</td>
-            <td>其他方式</td>
-            <!<td>申通物流</td>
-            <td>2017-08-17 18:22</td> -->
+					
 				</tbody>
 			</table>
 			<div class="page">
 				<div>
 					<a class="prev" id="prev" href="javascript:;">&lt;&lt;</a>
-					<p id="pagenum">
-						<!-- <a class="num" href="">1</a>
-                    <a class="current">2</a>
-                    <a class="num" href="">3</a>
-                    <a class="num" href="">489</a> -->
-					</p>
+					<p id="pagenum"></p>
 					<a class="next" id="next" href="javascript:;">&gt;&gt;</a>&nbsp;到第
 					<input type="text" id="skipNum"/>&nbsp;页
 					<a class="skip" id="skip" href="javascript:;">确定</a>
 				</div>
 			</div>
 		</div>
-		<script type="text/javascript" src="https://cdn.bootcss.com/jquery/3.2.1/jquery.min.js"></script>
+		<script type="text/javascript" src="../lib/jquery-v3.2.1.js"></script>
 		<script src="../lib/common.js" type="text/javascript" charset="utf-8"></script>
 		<script type="text/javascript" src="../lib/layui/layui.js" charset="utf-8"></script>
 		<script type="text/javascript" src="../js/xadmin.js"></script>
 		<script type="text/javascript" src="../js/goodlist.js"></script>
-		<script>
-			layui.use('laydate', function() {
-				var laydate = layui.laydate;
-
-				//执行一个laydate实例
-				laydate.render({
-					elem: '#start' //指定元素
-				});
-
-				//执行一个laydate实例
-				laydate.render({
-					elem: '#end' //指定元素
-				});
-			});
-
-			/*用户-停用*/
-			function member_stop(obj, id) {
-				var _id = $(obj).parent().parent().data('id');
-				var thisStatus = '';
-				if($(obj).attr('title') == '已上架') {
-					thisStatus = '下架';
-				} else {
-					thisStatus = '上架';
-				}
-				layer.confirm('确定要' + thisStatus + '吗？', function(index) {
-
-					if($(obj).attr('title') == '已上架') {
-
-						$.ajax({
-							type: 'get',
-							url: 'http://localhost:3008/good/updateStatus',
-							// url: '/good/updateStatus',
-							async: true,
-							data: {
-								'_id': _id,
-								'status': '下架'
-							},
-							success: function(str) {
-								console.log(str);
-								$(obj).attr('title', '已下架')
-								$(obj).find('i').html('&#xe62f;');
-
-								$(obj).parents("tr").find(".td-status").find('span').addClass('layui-btn-disabled').html('下架');
-								layer.msg('已下架!', {
-									icon: 5,
-									time: 1000
-								});
-							}
-						});
-
-					} else {
-						$.ajax({
-							type: 'get',
-							url: 'http://localhost:3008/good/updateStatus',
-							// url: '/good/updateStatus',
-							async: true,
-							data: {
-								'_id': _id,
-								'status': '上架'
-							},
-							success: function(str) {
-								$(obj).attr('title', '已上架')
-								$(obj).find('i').html('&#xe601;');
-
-								$(obj).parents("tr").find(".td-status").find('span').removeClass('layui-btn-disabled').html('上架');
-								layer.msg('已上架!', {
-									icon: 6,
-									time: 1000
-								});
-							}
-
-						});
-					}
-				});
-			}
-
-			function member_del(obj, id) {
-				layer.confirm('确定要删除吗？', function(index) {
-					//发异步删除数据
-					var _id = $(obj).parents("tr").find('.adminId').text();
-
-					$.ajax({
-						type: 'get',
-						url: 'http://localhost:3008/good/delete',
-						// url: '/good/delete',
-						async: true,
-						data: {
-							'_id': _id
-						},
-						success: (str) => {
-							console.log(str);
-						}
-					});
-
-					$(obj).parents("tr").remove();
-					layer.msg('已删除!', {
-						icon: 1,
-						time: 1000
-					});
-					window.location.reload();
-				});
-			}
-
-			// console.log( $('#goodList .good_pick'));
-			$('#goodList').on('click', '.good_pick', function() {
-				if(!$(this).hasClass('layui-form-checked')) {
-					$(this).addClass('layui-form-checked');
-				} else {
-					$(this).removeClass('layui-form-checked');
-				}
-
-			})
-
-			function delAll(argument) {
-
-				var data = tableCheck.getData();
-				layer.confirm('确定要删除吗？', function(index) {
-					for(var i = 0; i < data.length; i++) {
-						$.ajax({
-							type: 'get',
-							url: 'http://localhost:3008/good/delete',
-							// url: '/good/delete',
-							async: true,
-							data: {
-								'_id': data[i]
-							},
-							success: (str) => {
-								console.log(str);
-							}
-						});
-					}
-					//捉到所有被选中的，发异步进行删除
-					layer.msg('删除成功', {
-						icon: 1
-					});
-					window.location.reload();
-
-					$(".layui-form-checked").not('.header').parents('tr').remove();
-				});
-			}
-		</script>
 	</body>
 
 </html>
