--- a/src/html/member-list.html
+++ b/src/html/member-list.html
@@ -10,9 +10,10 @@
 		<link rel="shortcut icon" href="/favicon.ico" type="image/x-icon" />
 		<link rel="stylesheet" href="../css/font.css">
 		<link rel="stylesheet" href="../css/xadmin.css">
-		<script type="text/javascript" src="https://cdn.bootcss.com/jquery/3.2.1/jquery.min.js"></script>
+		<script type="text/javascript" src="../lib/jquery-v3.2.1.js"></script>
+		<script type="text/javascript" src="../lib/common.js"></script>
 		<script type="text/javascript" src="../lib/layui/layui.js" charset="utf-8"></script>
-         <script type="text/javascript" src="../js/x-layui.js"></script>
+		<script type="text/javascript" src="../js/x-layui.js"></script>
 		<script type="text/javascript" src="../js/xadmin.js"></script>
 		<script type="text/javascript" src="../js/memberlist.js"></script>
 	</head>
@@ -21,9 +22,9 @@
 		<div class="x-nav">
 			<span class="layui-breadcrumb">
         <a href="">首页</a>
-        <a href="">演示</a>
+        <a href="">会员管理</a>
         <a>
-          <cite>导航元素</cite></a>
+          <cite>会员列表</cite></a>
       </span>
 			<a class="layui-btn layui-btn-small" style="line-height:1.6em;margin-top:3px;float:right" href="javascript:location.replace(location.href);" title="刷新">
 				<i class="layui-icon" style="line-height:30px">ဂ</i></a>
@@ -44,7 +45,7 @@
 
 				<button class="layui-btn addmember" onclick="x_admin_show('添加用户','./member-add.html',600,400)"><i class="layui-icon"></i>添加</button>
 
-				<span class="x-right" style="line-height:40px">共有数据：88 条</span>
+				<span class="x-right" style="line-height:40px"></span>
 			</xblock>
 			<table class="layui-table">
 				<thead>
@@ -64,94 +65,18 @@
 					</tr>
 				</thead>
 
-				<tbody class="layui-tbody">
-					<!-- <tr>
->>>>>>> xiuBranch
-            <td>
-              <div class="layui-unselect layui-form-checkbox" lay-skin="primary" data-id='2'><i class="layui-icon">&#xe605;</i></div>
-            </td>
-            <td>1</td>
-            <td>小明</td>
-            <td>男</td>
-            <td>13000000000</td>
-            <td>admin@mail.com</td>
-            <td>北京市 海淀区</td>
-            <td>2017-01-01 11:11:42</td>
-            <td class="td-status">
-              <span class="layui-btn layui-btn-normal layui-btn-mini">已启用</span></td>
-            <td class="td-manage">
-              <a onclick="member_stop(this,'10001')" href="javascript:;"  title="启用">
-                <i class="layui-icon">&#xe601;</i>
-              </a>
-              <a title="编辑"  onclick="x_admin_show('编辑','member-edit.html',600,400)" href="javascript:;">
-                <i class="layui-icon">&#xe642;</i>
-              </a>
-              <a onclick="x_admin_show('修改密码','member-password.html',600,400)" title="修改密码" href="javascript:;">
-                <i class="layui-icon">&#xe631;</i>
-              </a>
-              <a title="删除" onclick="member_del(this,'要删除的id')" href="javascript:;">
-                <i class="layui-icon">&#xe640;</i>
-              </a>
-            </td>
-          </tr>
-          <tr>
-            <td>
-              <div class="layui-unselect layui-form-checkbox" lay-skin="primary" data-id='2'><i class="layui-icon">&#xe605;</i></div>
-            </td>
-            <td>1</td>
-            <td>小明</td>
-            <td>男</td>
-            <td>13000000000</td>
-            <td>admin@mail.com</td>
-            <td>北京市 海淀区</td>
-            <td>2017-01-01 11:11:42</td>
-            <td class="td-status">
-              <span class="layui-btn layui-btn-normal layui-btn-mini">已启用</span></td>
-            <td class="td-manage">
-              <a onclick="member_stop(this,'10001')" href="javascript:;"  title="启用">
-                <i class="layui-icon">&#xe601;</i>
-              </a>
-              <a title="编辑"  onclick="x_admin_show('编辑','member-edit.html',600,400)" href="javascript:;">
-                <i class="layui-icon">&#xe642;</i>
-              </a>
-              <a onclick="x_admin_show('修改密码','member-password.html',600,400)" title="修改密码" href="javascript:;">
-                <i class="layui-icon">&#xe631;</i>
-              </a>
-              <a title="删除" onclick="member_del(this,'要删除的id')" href="javascript:;">
-                <i class="layui-icon">&#xe640;</i>
-              </a>
-            </td>
-          </tr>
-<<<<<<< HEAD
-        </tbody>
-      </table>
-      <div class="page">
-        <div>
-          <a class="prev" href="">&lt;&lt;</a>
-          <a class="num" href="">1</a>
-          <span class="current">2</span>
-          <a class="num" href="">3</a>
-          <a class="num" href="">489</a>
-          <a class="next" href="">&gt;&gt;</a>
-=======
-           -->
-
-				</tbody>
+				<tbody class="layui-tbody"></tbody>
 			</table>
 			<div class="page" style="margin-left:500px">
 				<div>
-					<a class="prev"  style="float:left">&lt;&lt;</a>
+					<a class="prev" style="float:left">&lt;&lt;</a>
 					<div class="pagenum" style="float:left"></div>
-					<!--  <a class="num " href="">1</a>
-          <span class="current">2</span>
-          <a class="num" href="">3</a>
-          <a class="num" href="">489</a> -->
-					<a class="next"  style="float:left">&gt;&gt;</a>
-
+					<a class="next" style="float:left">&gt;&gt;</a>
 				</div>
 			</div>
 
 		</div>
+
 		<script>
 			layui.use('laydate', function() {
 				var laydate = layui.laydate;
@@ -249,9 +174,8 @@
 					layer.msg('删除成功', {
 						icon: 1
 					});
-                    
-					$(".layui-form-checked").not('.header').parents('tr').remove();
 
+					$(".layui-form-checked").not('.header').parents('tr').remove();
 
 					for(let j = 0; j < acheckarr.length; j++) {
 
