--- a/src/html/order-edit.html
+++ b/src/html/order-edit.html
@@ -10,9 +10,11 @@
 		<link rel="shortcut icon" href="/favicon.ico" type="image/x-icon" />
 		<link rel="stylesheet" href="../css/font.css">
 		<link rel="stylesheet" href="../css/xadmin.css">
-		<script type="text/javascript" src="https://cdn.bootcss.com/jquery/3.2.1/jquery.min.js"></script>
+		<script type="text/javascript" src="../lib/jquery-v3.2.1.js"></script>
+		<script type="text/javascript" src="../lib/common.js"></script>
 		<script type="text/javascript" src="../lib/layui/layui.js" charset="utf-8"></script>
 		<script type="text/javascript" src="../js/xadmin.js"></script>
+
 	</head>
 
 	<body>
@@ -43,43 +45,6 @@
 						<input type="text" id="address" name="username" required="" lay-verify="" autocomplete="off" class="layui-input">
 					</div>
 				</div>
-				<!--  <div class="layui-form-item">
-              <label for="username" class="layui-form-label">
-                  <span class="x-red">*</span>配送物流
-              </label>
-              <div class="layui-input-inline">
-                  <select id="shipping" name="shipping" class="valid">
-                    <option value="shentong">申通物流</option>
-                    <option value="shunfeng">顺丰物流</option>
-                  </select>
-              </div>
-          </div>
-          <div class="layui-form-item">
-              <label for="username" class="layui-form-label">
-                  <span class="x-red">*</span>支付方式
-              </label>
-              <div class="layui-input-inline">
-                  <select name="contrller">
-                    <option>支付方式</option>
-                    <option>支付宝</option>
-                    <option>微信</option>
-                    <option>货到付款</option>
-                  </select>
-              </div>
-          </div> -->
-				<!--  <div class="layui-form-item">
-              <label for="L_email" class="layui-form-label">
-                  <span class="x-red">*</span>发票抬头
-              </label>
-              <div class="layui-input-inline">
-                  <input type="text" id="L_email" name="email" required="" lay-verify="email"
-                  autocomplete="off" class="layui-input">
-              </div>
-              <div class="layui-form-mid layui-word-aux">
-                  <span class="x-red">*</span>
-              </div>
-          </div> -->
-
 				<div class="layui-form-item">
 					<label for="username" class="layui-form-label">
                   <span class="x-red">*</span>数量
@@ -136,106 +101,19 @@
 						<span class="x-red">*</span>
 					</div>
 				</div>
-				<!-- <div class="layui-form-item layui-form-text">
-              <label for="desc" class="layui-form-label">
-                  商品增加
-              </label>
-              <div class="layui-input-block">
-                  <table class="layui-table">
-                    <tbody>
-                      <tr>
-                        <td>haier海尔 BC-93TMPF 93升单门冰箱</div></td>
-                        <td>0.01</div></td>
-                        <td>984</div></td>
-                        <td>1</td>
-                        <td>删除</td>
-                      </tr>
-                      <tr>
-                        <td>haier海尔 BC-93TMPF 93升单门冰箱</div></td>
-                        <td>0.01</div></td>
-                        <td>984</div></td>
-                        <td>1</td>
-                        <td>删除</td>
-                      </tr>
-                    </tbody>
-                  </table>
-              </div>
-          </div>
-          <div class="layui-form-item layui-form-text">
-              <label for="desc" class="layui-form-label">
-                  描述
-              </label>
-              <div class="layui-input-block">
-                  <textarea placeholder="请输入内容" id="desc" name="desc" class="layui-textarea"></textarea>
-              </div>
-          </div> -->
+				
 				<div class="layui-form-item">
 					<label for="L_repass" class="layui-form-label">
-              </label>
-					<button class="layui-btn" lay-filter="add" lay-submit="">
-                  增加
-              </button>
+             </label>
+					<input type="button" class="layui-btn" id="addGood" lay-filter="add" lay-submit="" value="更新">
 				</div>
 			</form>
 		</div>
 		<script>
-			//封装cookie函数：一个对象多重功能
-			//存: Cookie.set()
-			//取: Cookie.get()
-			//删: Cookie.remove()
-
-			var Cookie = {
-				//设置cookie，存数据到cookie里面
-				set: function(name, value, prop) {
-					var str = name + '=' + value;
-					//json(prop)存后面一些可选参数
-					//expires:设置失效时间
-					if(prop.expires) {
-						str += ';expires=' + prop.expires.toUTCString(); //把时间转成字符串
-					}
-					//设置path路径
-					if(prop.path) {
-						str += ';path=' + prop.path;
-					}
-					//domain设置可访问cookie的域名
-					if(prop.domain) {
-						str += ';domain=' + prop.domain;
-					}
-					document.cookie = str;
-				},
-
-				//获取cookie数据
-				get: function(key) {
-					var cookies = document.cookie;
-					// name=tiantian; age=18; usn=yuanyuan; pws=456123
-
-					var arr = cookies.split('; ');
-					//['name=tiantian','age=18','usn=yuanyuan','pws=456123']
-					for(var i = 0; i < arr.length; i++) {
-						var arr2 = arr[i].split('=');
-						//['name','tiantian']
-						if(key == arr2[0]) {
-							return arr2[1];
-						}
-					}
-				},
-
-				//删除
-				remove: function(key) {
-					//删的原理:设置过期时间
-					var now = new Date();
-					now.setDate(now.getDate() - 1);
-					//重新设置时间
-					this.set(key, 'no', {
-						expires: now
-					});
-				}
-			}
-
 			var renderdata = '';
 			if(Cookie.get('data')) {
-				renderdata = Cookie.get('data');
-				renderdata = JSON.parse(renderdata);
+				renderdatas = Cookie.get('data');
+				renderdata = JSON.parse(renderdatas);
 				console.log(renderdata);
 
 				$("#number").val(renderdata.number);
@@ -247,78 +125,7 @@
 				$("#pay").val(renderdata.pay);
 				$("#total").val(renderdata.total);
 
-				// var isok1 = true;
-				// $('#L_email').blur(() => {
-				//     var val = $('#L_email').val();
-				//     var strs = checkReg.trim(val);
-				//     console.log(strs);
-
-				//     if (strs) {
-				//         $.ajax({
-				//             type: 'get',
-				//             url: '/addAdmin/checkname',
-				//             async: true,
-				//             data: {
-				//                 'email': strs
-				//             },
-				//             success: (str) => {
-				//                 if (str.code == '1') {
-				//                     if (renderdata.email == str.data.username) {
-				//                       console.log(1);
-				//                         isok1 = true;
-				//                     } else {
-				//                       console.log('same');
-				//                         $('#email').html('该登录名已存在');
-				//                         $('#email').css('color', 'red');
-				//                         isok1 = false;
-				//                     }
-
-				//                 } else {
-				//                     isok1 = true;
-				//                 }
-				//             }
-				//         });
-				//     } else {
-				//         $('#userInfor').html('登录名不符合规则');
-				//         $('#userInfor').css('color', 'red');
-				//         isok1 = false;
-				//     }
-				// });
-
-				// // var isok6 = true;
-				// var role = '';
-				// $('#role input').eq(0).prop('checked', 'checked');
-				// for (var i = 0; i < $('#role input').size(); i++) {
-				//     if ($('#role input').eq(i).data('names') == renderdata.role) {
-				//         $('#role input').eq(i).prop('checked', 'checked');
-				//         // var isok6 = true;
-				//     }
-				// }
-
-				// $('#role input').click(function() {
-				//     console.log($(this));
-				//     $(this).prop('checked', 'checked');
-				//     role = $(this).data('names');
-				// });
-
-				// layui.use(['form', 'layer'], function() {
-				//     $ = layui.jquery;
-				//     var form = layui.form,
-				//         layer = layui.layer;
-
-				//     form.verify({
-				//         username: [/^[a-zA-Z][\w\-]{2,19}$/, '登录名以字母开头，3-20位'],
-				//         pass: [/(.+){6,12}$/, '密码必须6到12位'],
-				//         repass: function(value) {
-				//             if ($('#L_pass').val() != $('#L_repass').val()) {
-				//                 return '两次密码不一致';
-				//             }
-				//         }
-				//     });
-
 			};
-			//     });
-			// };
 
 			layui.use(['form', 'layer'], function() {
 				$ = layui.jquery;
@@ -341,19 +148,13 @@
 				});
 
 				//监听提交
-				form.on('submit(add)', function(data) {
-					console.log(data);
-
-					let obj = data.field;
-					console.log(data.field);
-					//发异步，把数据提交给php
-
+				form.on('submit(add)', function() {
 					$.ajax({
 						type: 'post',
-						url: '/orderlist/addorderlist',
+						url: '/orderlist/update',
 						async: true,
 						data: {
-
+							'_id': renderdata._id,
 							"number": $("#number").val(),
 							'person': $("#username").val(),
 							'phone': $("#phone").val(),
@@ -361,36 +162,21 @@
 							"price": $("#price").val(),
 							"itemSum": $("#goodstotal").val(),
 							"pay": $("#pay").val(),
-							"total": $("#total").val(),
-
+							"total": $("#total").val()
 						},
 						success: function(str) {
 							console.log(str);
 							layer.alert("更新成功", {
 								icon: 6
 							}, function() {
-								// 获得frame索引
-								var index = parent.layer.getFrameIndex(window.name);
-								//关闭当前frame
-								parent.layer.close(index);
+								parent.location.reload();
 							});
 
 						}
 					})
-					//发异步，把数据提交给php
-					layer.alert("增加成功", {
-						icon: 6
-					}, function() {
-						// 获得frame索引
-						var index = parent.layer.getFrameIndex(window.name);
-						//关闭当前frame
-						parent.layer.close(index);
-					});
-					return false;
-
 				});
 
-			}); //最后的结尾
+			});
 		</script>
 	</body>
 
