--- a/src/html/welcome.html
+++ b/src/html/welcome.html
@@ -2,18 +2,18 @@
 <html>
     <head>
         <meta charset="UTF-8">
-        <title>欢迎页面-X-admin2.0</title>
+        <title>欢迎页面</title>
         <meta name="renderer" content="webkit">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
         <meta name="viewport" content="width=device-width,user-scalable=yes, minimum-scale=0.4, initial-scale=0.8,target-densitydpi=low-dpi" />
-        <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon" />
+        <link rel="shortcut icon" href="../images/favicon.ico" type="image/x-icon" />
         <link rel="stylesheet" href="../css/font.css">
         <link rel="stylesheet" href="../css/xadmin.css">
     </head>
     <body>
     <div class="x-body layui-anim layui-anim-up">
         <blockquote class="layui-elem-quote">欢迎管理员：
-            <span class="x-red">test</span>！当前时间:2018-04-25 20:50:53</blockquote>
+            <span class="x-red" id="admin">test</span>！当前时间：<span id="time">2018-04-25 20:50:53</span></blockquote>
         <fieldset class="layui-elem-field">
             <legend>数据统计</legend>
             <div class="layui-field-box">
@@ -25,44 +25,37 @@
                                     <ul class="layui-row layui-col-space10 layui-this">
                                         <li class="layui-col-xs2">
                                             <a href="javascript:;" class="x-admin-backlog-body">
-                                                <h3>文章数</h3>
+                                                <h3>商品类别数</h3>
                                                 <p>
-                                                    <cite>66</cite></p>
+                                                    <cite id="category">12</cite></p>
+                                            </a>
+                                        </li>
+                                        <li class="layui-col-xs2">
+                                            <a href="javascript:;" class="x-admin-backlog-body">
+                                                <h3>商品总数</h3>
+                                                <p>
+                                                    <cite id="goods">66</cite></p>
+                                            </a>
+                                        </li>
+                                        <li class="layui-col-xs2">
+                                            <a href="javascript:;" class="x-admin-backlog-body">
+                                                <h3>订单数</h3>
+                                                <p>
+                                                    <cite id="order">99</cite></p>
                                             </a>
                                         </li>
                                         <li class="layui-col-xs2">
                                             <a href="javascript:;" class="x-admin-backlog-body">
                                                 <h3>会员数</h3>
                                                 <p>
-                                                    <cite>12</cite></p>
+                                                    <cite id="user">67</cite></p>
                                             </a>
                                         </li>
                                         <li class="layui-col-xs2">
                                             <a href="javascript:;" class="x-admin-backlog-body">
-                                                <h3>回复数</h3>
+                                                <h3>管理员数</h3>
                                                 <p>
-                                                    <cite>99</cite></p>
-                                            </a>
-                                        </li>
-                                        <li class="layui-col-xs2">
-                                            <a href="javascript:;" class="x-admin-backlog-body">
-                                                <h3>商品数</h3>
-                                                <p>
-                                                    <cite>67</cite></p>
-                                            </a>
-                                        </li>
-                                        <li class="layui-col-xs2">
-                                            <a href="javascript:;" class="x-admin-backlog-body">
-                                                <h3>文章数</h3>
-                                                <p>
-                                                    <cite>67</cite></p>
-                                            </a>
-                                        </li>
-                                        <li class="layui-col-xs2">
-                                            <a href="javascript:;" class="x-admin-backlog-body">
-                                                <h3>文章数</h3>
-                                                <p>
-                                                    <cite>6766</cite></p>
+                                                    <cite id="adminNum">67</cite></p>
                                             </a>
                                         </li>
                                     </ul>
@@ -80,12 +73,7 @@
                     <tbody>
                         <tr>
                             <td >
-                                <a class="x-a" href="/" target="_blank">新版x-admin 2.0上线了</a>
-                            </td>
-                        </tr>
-                        <tr>
-                            <td >
-                                <a class="x-a" href="/" target="_blank">交流qq群:(519492808)</a>
+                                <a class="x-a" href="/" target="_blank">走秀网后台管理系统3.5.2版上线了</a>
                             </td>
                         </tr>
                     </tbody>
@@ -98,29 +86,25 @@
                 <table class="layui-table">
                     <tbody>
                         <tr>
-                            <th>xxx版本</th>
-                            <td>1.0.180420</td></tr>
+                            <th>后台管理版本</th>
+                            <td>3.5.2</td></tr>
                         <tr>
                             <th>服务器地址</th>
-                            <td>x.xuebingsi.com</td></tr>
+                            <td>10.3.141.213:3008</td></tr>
                         <tr>
                             <th>操作系统</th>
-                            <td>WINNT</td></tr>
+                            <td>Windows</td></tr>
                         <tr>
                             <th>运行环境</th>
-                            <td>Apache/2.4.23 (Win32) OpenSSL/1.0.2j mod_fcgid/2.3.9</td></tr>
+                            <td>Node.js</td></tr>
                         <tr>
-                            <th>PHP版本</th>
-                            <td>5.6.27</td></tr>
+                            <th>Node.js版本</th>
+                            <td>10.14.2</td></tr>
+                        
                         <tr>
-                            <th>PHP运行方式</th>
-                            <td>cgi-fcgi</td></tr>
-                        <tr>
-                            <th>MYSQL版本</th>
-                            <td>5.5.53</td></tr>
-                        <tr>
-                            <th>ThinkPHP</th>
-                            <td>5.0.18</td></tr>
+                            <th>MongoDB版本</th>
+                            <td>4.0.4</td></tr>
+                        
                         <tr>
                             <th>上传附件限制</th>
                             <td>2M</td></tr>
@@ -141,12 +125,11 @@
                     <tbody>
                         <tr>
                             <th>版权所有</th>
-                            <td>xuebingsi(xuebingsi)
-                                <a href="http://x.xuebingsi.com/" class='x-a' target="_blank">访问官网</a></td>
+                            <td>xiuTeam</td>
                         </tr>
                         <tr>
                             <th>开发者</th>
-                            <td>马志斌(113664000@qq.com)</td></tr>
+                            <td>xiuTeam：Karen Huang、rainbow Zhang</td></tr>
                     </tbody>
                 </table>
             </div>
@@ -154,4 +137,40 @@
         <blockquote class="layui-elem-quote layui-quote-nm">感谢layui,百度Echarts,jquery,本系统由x-admin提供技术支持。</blockquote>
     </div>
     </body>
+
+    <script type="text/javascript" src="../lib/common.js"></script>
+    <script type="text/javascript">
+        var admin=document.querySelector('#admin');
+        var time=document.querySelector('#time');
+        var cookie= Cookie.get("username")?Cookie.get("username"):"";
+        var date = new Date();
+        var week=date.getDay();
+        var weekarr=['天','一','二','三','四','五','六'];
+        var adminNum=document.querySelector('#adminNum');
+        var goods=document.querySelector('#goods');
+        var user=document.querySelector('#user');
+        var order=document.querySelector('#order');
+        var category=document.querySelector('#category');
+
+        if(cookie){
+          admin.innerHTML=cookie;
+          time.innerHTML=date.getFullYear() + '年' + (date.getMonth() + 1) + '月' + date.getDate() + '日&nbsp;&nbsp;' + '星期'+ weekarr[week];
+
+          let xhr = new XMLHttpRequest();
+            let status = [200, 304];
+            xhr.open("get", "/admin/checkAll", true);
+            xhr.send();
+            xhr.onload = () => {
+                if(status.includes(xhr.status)) {
+                    let res = JSON.parse(xhr.responseText);
+
+                    adminNum.innerHTML=res.admin;
+                    goods.innerHTML=res.goodlist;
+                    user.innerHTML=res.user;
+                    order.innerHTML=res.order;
+                    category.innerHTML=res.category;
+                }
+            }
+        }
+    </script>
 </html>
